2003-03-28 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp, src/endpoint.h: Removed Citron GK support.

	* src/gatekeeper.cpp: Removed Citron GK support.

	* src/gdkvideoio.cpp, src/gdkvideoio.h: Fixes to be compatible
	with OpenH323 CVS. Directly use RGB for SDL instead of YUVOverlays.
	
	* src/videograbber.cpp: Fixes to be compatible with OpenH323 CVS.
	
2003-03-28 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Make sure to remove the listener before exiting.

	* src/videograbber.cpp: Fixed video_format setting.
	
2003-03-26 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp, src/endpoint.h: Applied patch from Fabrice 
	Alphonso <fabrice@alphonso.dyndns.org> to add timestamp to saved
	snapshot files.
	
2003-03-25 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Applied patch from Stefan Bruens to fix compilation
	on Suse.
	
2003-03-25 Damien Sandras  <dsandras@seconix.com>

	* endpoint.cpp: Changed destructor.
	* gnomemeeting.cpp: Changed destructor.
	* main_window.cpp: Make sure the call is cleared before deleting
	the Main Application.
	
	
2003-03-25 Damien Sandras  <dsandras@seconix.com>

	* src/Makefile.am: Removed cleaner.cpp/.h from the compilation files.
	
	* src/callbacks.cpp: Changed the quit callback, the old 
	GMThreadsCleaner is not needed anymore.
	
	* src/common.h: Removed unused mutex and GMThreadsCleaner counter.
	
	* src/config.cpp: Modified for the new GMVideoGrabber API.
	
	* src/connection.cpp: Modified for the new GMVideoGrabber API. 
	
	* src/endpoint.cpp: Modified for the new GMVideoGrabber API.
	The GMVideoGrabber creation/deletion is now moved 
	to the Main application. GMVideoGrabber is now an AutoDeleteThread,
	created and deleted asynchronously. The GMVideoGrabber thread now only
	exists when needed and when grabbing from the device. 
	
	* src/endpoint.h: Same.
	
	* src/gnomemeeting.cpp: Same.
	
	* src/gnomemeeting.h: Same.
	
	* src/main_window.cpp: Only update brightness/whiteness/colorness/