@@ -1,3 +1,8 @@
+2003-04-03 Damien Sandras  <dsandras@seconix.com>
+
+	* src/endpoint.cpp, src/endpoint.h, src/gatekeeper.cpp: Fixed problems
+	with Citron GK NAT support compilation.
+
 2003-03-28 Damien Sandras  <dsandras@seconix.com>
 
 	* src/endpoint.cpp, src/endpoint.h: Removed Citron GK support.
